K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: resume-prod
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "davrat-static-ip"
    networking.gke.io/managed-certificates: "managed-cert-prod"
#    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
#    kubernetes.io/ingress.class: "nginx"
#    kubernetes.io/ingress.class:  gce
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE THIS LINE ABOVE

spec:
#  tls:
#    - hosts:
#        - apiv1.sszzz.me
#      secretName: echo-tls
#  defaultBackend:
#    service:
#      name: web-resume-backend
#      port:
#        number: 8080
  rules:
    - host: apiv1.sszzz.me
      http:
        paths:
          - pathType: Prefix
            path: /api
            # UPDATE THIS LINE ABOVE
            backend:
              service:
                name: web-resume-backend
                port:
                  number: 80
    - host: api.cloud.sszzz.me
      http:
        paths:
          - pathType: Prefix
            path: /
            # UPDATE THIS LINE ABOVE
            backend:
              service:
                name: yun-backend
                port:
                  number: 80

    - host: apiv2.sszzz.me
      http:
        paths:
          - pathType: Prefix
            path: /
            # UPDATE THIS LINE ABOVE
            backend:
              service:
                name: rust-ml
                port:
                  number: 80
